altv-capi/client/altv-capi.hpp


struct alt_VectorLayout_float_4 {
    float elements[4];
};
CAPI void alt_VectorLayout_float_4_free(struct alt_VectorLayout_float_4* ptr);
CAPI struct alt_VectorLayout_float_4* alt_VectorLayout_float_4_Create();
CAPI struct alt_VectorLayout_float_4* alt_VectorLayout_float_4_Create_2(float* el);
CAPI float* alt_VectorLayout_float_4_Access_size_t(struct alt_VectorLayout_float_4* _instance, unsigned long long key);
CAPI float* alt_VectorLayout_float_4_Access_size_t_1(struct alt_VectorLayout_float_4* _instance, unsigned long long key);
CAPI struct alt_VectorLayout_float_4* alt_VectorLayout_float_4_Create_3(struct alt_VectorLayout_float_4* _p0);
CAPI struct alt_VectorLayout_float_4* alt_VectorLayout_float_4_Create_4(struct alt_VectorLayout_float_4* _p0);
CAPI void alt_VectorLayout_float_4_Assign_constVectorLayout_float_4Ref(struct alt_VectorLayout_float_4* _instance, struct alt_VectorLayout_float_4* _p0);
CAPI void alt_VectorLayout_float_4_Assign_VectorLayout_float_4RefRef(struct alt_VectorLayout_float_4* _instance, struct alt_VectorLayout_float_4* _p0);
typedef float alt_VectorLayout_float_4_Element;
struct alt_Vector_float_4_VectorLayout_float_4 {
    float elements[4];
};
CAPI void alt_Vector_float_4_VectorLayout_float_4_free(struct alt_Vector_float_4_VectorLayout_float_4* ptr);
CAPI struct alt_Vector_float_4_VectorLayout_float_4* alt_Vector_float_4_VectorLayout_float_4_Create();
CAPI struct alt_Vector_float_4_VectorLayout_float_4* alt_Vector_float_4_VectorLayout_float_4_Create_2(float* el);
CAPI float* alt_Vector_float_4_VectorLayout_float_4_Access_size_t(struct alt_Vector_float_4_VectorLayout_float_4* _instance, unsigned long long key);
CAPI float* alt_Vector_float_4_VectorLayout_float_4_Access_size_t_1(struct alt_Vector_float_4_VectorLayout_float_4* _instance, unsigned long long key);
CAPI struct alt_Vector_float_4_VectorLayout_float_4* alt_Vector_float_4_VectorLayout_float_4_Create_3(struct alt_VectorLayout_float_4* _p0);
CAPI struct alt_Vector_float_4_VectorLayout_float_4* alt_Vector_float_4_VectorLayout_float_4_Create_4(struct alt_VectorLayout_float_4* _p0);
CAPI void alt_Vector_float_4_VectorLayout_float_4_Assign_constVectorLayout_float_4Ref(struct alt_Vector_float_4_VectorLayout_float_4* _instance, struct alt_VectorLayout_float_4* _p0);
CAPI void alt_Vector_float_4_VectorLayout_float_4_Assign_VectorLayout_float_4RefRef(struct alt_Vector_float_4_VectorLayout_float_4* _instance, struct alt_VectorLayout_float_4* _p0);
CAPI struct alt_Vector_float_4_VectorLayout_float_4* alt_Vector_float_4_VectorLayout_float_4_Create_5();
CAPI struct alt_Vector_float_4_VectorLayout_float_4* alt_Vector_float_4_VectorLayout_float_4_Create_7(struct alt_VectorLayout_float_4* layout);
CAPI float alt_Vector_float_4_VectorLayout_float_4_LengthSqr(struct alt_Vector_float_4_VectorLayout_float_4* _instance);
CAPI float alt_Vector_float_4_VectorLayout_float_4_Length(struct alt_Vector_float_4_VectorLayout_float_4* _instance);
CAPI struct alt_Vector_float_4_VectorLayout_float_4* alt_Vector_float_4_VectorLayout_float_4_Create_8(struct alt_Vector_float_4_VectorLayout_float_4* _p0);
CAPI struct alt_Vector_float_4_VectorLayout_float_4* alt_Vector_float_4_VectorLayout_float_4_Create_9(struct alt_Vector_float_4_VectorLayout_float_4* _p0);
CAPI void alt_Vector_float_4_VectorLayout_float_4_Assign_constVector_float_4_VectorLayout_float_4Ref(struct alt_Vector_float_4_VectorLayout_float_4* _instance, struct alt_Vector_float_4_VectorLayout_float_4* _p0);
CAPI void alt_Vector_float_4_VectorLayout_float_4_Assign_Vector_float_4_VectorLayout_float_4RefRef(struct alt_Vector_float_4_VectorLayout_float_4* _instance, struct alt_Vector_float_4_VectorLayout_float_4* _p0);
typedef struct alt_VectorLayout_float_4 alt_Vector_float_4_VectorLayout_float_4_Layout;
typedef float alt_Vector_float_4_VectorLayout_float_4_Element;
typedef struct alt_Vector_float_2_VectorLayout_float_2 alt_Vector2f;
typedef struct alt_Vector_int_2_VectorLayout_int_2 alt_Vector2i;
typedef struct alt_Vector_float_3_VectorLayout_float_3 alt_Vector3f;
typedef struct alt_Vector_int_3_VectorLayout_int_3 alt_Vector3i;
typedef struct alt_Vector_float_4_VectorLayout_float_4 alt_Vector4f;
typedef struct alt_Vector_int_4_VectorLayout_int_4 alt_Vector4i;
typedef struct alt_Matrix_float_4_4_MatrixLayout_float_4_4 alt_DXMatrix;
struct alt_PointLayout {
    float x;
    float y;
    float z;
};
CAPI void alt_PointLayout_free(struct alt_PointLayout* ptr);
CAPI struct alt_PointLayout* alt_PointLayout_Create();
CAPI struct alt_PointLayout* alt_PointLayout_Create_1(float _x, float _y, float _z);
CAPI struct alt_PointLayout* alt_PointLayout_Create_2(float* elements);
CAPI float* alt_PointLayout_Access_size_t(struct alt_PointLayout* _instance, unsigned long long key);
CAPI float* alt_PointLayout_Access_size_t_1(struct alt_PointLayout* _instance, unsigned long long key);
CAPI struct alt_PointLayout* alt_PointLayout_Create_3(struct alt_PointLayout* _p0);
CAPI struct alt_PointLayout* alt_PointLayout_Create_4(struct alt_PointLayout* _p0);
typedef float alt_PointLayout_Element;
struct alt_PointPaddedLayout {
    float x;
    float y;
    float z;
    float pad;
};
CAPI void alt_PointPaddedLayout_free(struct alt_PointPaddedLayout* ptr);
CAPI struct alt_PointPaddedLayout* alt_PointPaddedLayout_Create();
CAPI struct alt_PointPaddedLayout* alt_PointPaddedLayout_Create_1(float _x, float _y, float _z);
CAPI struct alt_PointPaddedLayout* alt_PointPaddedLayout_Create_2(float* elements);
CAPI float* alt_PointPaddedLayout_Access_size_t(struct alt_PointPaddedLayout* _instance, unsigned long long key);
CAPI float* alt_PointPaddedLayout_Access_size_t_1(struct alt_PointPaddedLayout* _instance, unsigned long long key);
CAPI struct alt_PointPaddedLayout* alt_PointPaddedLayout_Create_3(struct alt_PointLayout* _p0);
CAPI struct alt_PointPaddedLayout* alt_PointPaddedLayout_Create_4(struct alt_PointLayout* _p0);
CAPI struct alt_PointPaddedLayout* alt_PointPaddedLayout_Create_5();
CAPI struct alt_PointPaddedLayout* alt_PointPaddedLayout_Create_6(float x, float y, float z);
CAPI struct alt_PointPaddedLayout* alt_PointPaddedLayout_Create_7(float* elements);