client/src/altv_capi.rs

# [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_VectorLayout_float_4 { pub elements : [ f32 ; 4usize ] , } # [ test ] fn bindgen_test_layout_alt_VectorLayout_float_4 ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_VectorLayout_float_4 > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_VectorLayout_float_4 ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_VectorLayout_float_4 > ( ) , 4usize , concat ! ( "Alignment of " , stringify ! ( alt_VectorLayout_float_4 ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_VectorLayout_float_4 > ( ) ) ) . elements as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_VectorLayout_float_4 ) , "::" , stringify ! ( elements ) ) ) ; } extern "C" { pub fn alt_VectorLayout_float_4_free ( ptr : * mut alt_VectorLayout_float_4 ) ; } extern "C" { pub fn alt_VectorLayout_float_4_Create ( ) -> * mut alt_VectorLayout_float_4 ; } extern "C" { pub fn alt_VectorLayout_float_4_Create_2 ( el : * mut f32 ) -> * mut alt_VectorLayout_float_4 ; } extern "C" { pub fn alt_VectorLayout_float_4_Access_size_t ( _instance : * mut alt_VectorLayout_float_4 , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_VectorLayout_float_4_Access_size_t_1 ( _instance : * mut alt_VectorLayout_float_4 , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_VectorLayout_float_4_Create_3 ( _p0 : * mut alt_VectorLayout_float_4 ) -> * mut alt_VectorLayout_float_4 ; } extern "C" { pub fn alt_VectorLayout_float_4_Create_4 ( _p0 : * mut alt_VectorLayout_float_4 ) -> * mut alt_VectorLayout_float_4 ; } extern "C" { pub fn alt_VectorLayout_float_4_Assign_constVectorLayout_float_4Ref ( _instance : * mut alt_VectorLayout_float_4 , _p0 : * mut alt_VectorLayout_float_4 ) ; } extern "C" { pub fn alt_VectorLayout_float_4_Assign_VectorLayout_float_4RefRef ( _instance : * mut alt_VectorLayout_float_4 , _p0 : * mut alt_VectorLayout_float_4 ) ; } pub type alt_VectorLayout_float_4_Element = f32 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Vector_float_4_VectorLayout_float_4 { pub elements : [ f32 ; 4usize ] , } # [ test ] fn bindgen_test_layout_alt_Vector_float_4_VectorLayout_float_4 ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_Vector_float_4_VectorLayout_float_4 > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_Vector_float_4_VectorLayout_float_4 ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_Vector_float_4_VectorLayout_float_4 > ( ) , 4usize , concat ! ( "Alignment of " , stringify ! ( alt_Vector_float_4_VectorLayout_float_4 ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_Vector_float_4_VectorLayout_float_4 > ( ) ) ) . elements as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_Vector_float_4_VectorLayout_float_4 ) , "::" , stringify ! ( elements ) ) ) ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_free ( ptr : * mut alt_Vector_float_4_VectorLayout_float_4 ) ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Create ( ) -> * mut alt_Vector_float_4_VectorLayout_float_4 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Create_2 ( el : * mut f32 ) -> * mut alt_Vector_float_4_VectorLayout_float_4 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Access_size_t ( _instance : * mut alt_Vector_float_4_VectorLayout_float_4 , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Access_size_t_1 ( _instance : * mut alt_Vector_float_4_VectorLayout_float_4 , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Create_3 ( _p0 : * mut alt_VectorLayout_float_4 ) -> * mut alt_Vector_float_4_VectorLayout_float_4 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Create_4 ( _p0 : * mut alt_VectorLayout_float_4 ) -> * mut alt_Vector_float_4_VectorLayout_float_4 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Assign_constVectorLayout_float_4Ref ( _instance : * mut alt_Vector_float_4_VectorLayout_float_4 , _p0 : * mut alt_VectorLayout_float_4 ) ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Assign_VectorLayout_float_4RefRef ( _instance : * mut alt_Vector_float_4_VectorLayout_float_4 , _p0 : * mut alt_VectorLayout_float_4 ) ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Create_5 ( ) -> * mut alt_Vector_float_4_VectorLayout_float_4 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Create_7 ( layout : * mut alt_VectorLayout_float_4 ) -> * mut alt_Vector_float_4_VectorLayout_float_4 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_LengthSqr ( _instance : * mut alt_Vector_float_4_VectorLayout_float_4 ) -> f32 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Length ( _instance : * mut alt_Vector_float_4_VectorLayout_float_4 ) -> f32 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Create_8 ( _p0 : * mut alt_Vector_float_4_VectorLayout_float_4 ) -> * mut alt_Vector_float_4_VectorLayout_float_4 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Create_9 ( _p0 : * mut alt_Vector_float_4_VectorLayout_float_4 ) -> * mut alt_Vector_float_4_VectorLayout_float_4 ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Assign_constVector_float_4_VectorLayout_float_4Ref ( _instance : * mut alt_Vector_float_4_VectorLayout_float_4 , _p0 : * mut alt_Vector_float_4_VectorLayout_float_4 ) ; } extern "C" { pub fn alt_Vector_float_4_VectorLayout_float_4_Assign_Vector_float_4_VectorLayout_float_4RefRef ( _instance : * mut alt_Vector_float_4_VectorLayout_float_4 , _p0 : * mut alt_Vector_float_4_VectorLayout_float_4 ) ; } pub type alt_Vector_float_4_VectorLayout_float_4_Layout = alt_VectorLayout_float_4 ; pub type alt_Vector_float_4_VectorLayout_float_4_Element = f32 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Vector_float_2_VectorLayout_float_2 { _unused : [ u8 ; 0 ] , } pub type alt_Vector2f = alt_Vector_float_2_VectorLayout_float_2 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Vector_int_2_VectorLayout_int_2 { _unused : [ u8 ; 0 ] , } pub type alt_Vector2i = alt_Vector_int_2_VectorLayout_int_2 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Vector_float_3_VectorLayout_float_3 { _unused : [ u8 ; 0 ] , } pub type alt_Vector3f = alt_Vector_float_3_VectorLayout_float_3 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Vector_int_3_VectorLayout_int_3 { _unused : [ u8 ; 0 ] , } pub type alt_Vector3i = alt_Vector_int_3_VectorLayout_int_3 ; pub type alt_Vector4f = alt_Vector_float_4_VectorLayout_float_4 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Vector_int_4_VectorLayout_int_4 { _unused : [ u8 ; 0 ] , } pub type alt_Vector4i = alt_Vector_int_4_VectorLayout_int_4 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Matrix_float_4_4_MatrixLayout_float_4_4 { _unused : [ u8 ; 0 ] , } pub type alt_DXMatrix = alt_Matrix_float_4_4_MatrixLayout_float_4_4 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_PointLayout { pub x : f32 , pub y : f32 , pub z : f32 , } # [ test ] fn bindgen_test_layout_alt_PointLayout ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_PointLayout > ( ) , 12usize , concat ! ( "Size of: " , stringify ! ( alt_PointLayout ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_PointLayout > ( ) , 4usize , concat ! ( "Alignment of " , stringify ! ( alt_PointLayout ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_PointLayout > ( ) ) ) . x as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_PointLayout ) , "::" , stringify ! ( x ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_PointLayout > ( ) ) ) . y as * const _ as usize } , 4usize , concat ! ( "Offset of field: " , stringify ! ( alt_PointLayout ) , "::" , stringify ! ( y ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_PointLayout > ( ) ) ) . z as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_PointLayout ) , "::" , stringify ! ( z ) ) ) ; } extern "C" { pub fn alt_PointLayout_free ( ptr : * mut alt_PointLayout ) ; } extern "C" { pub fn alt_PointLayout_Create ( ) -> * mut alt_PointLayout ; } extern "C" { pub fn alt_PointLayout_Create_1 ( _x : f32 , _y : f32 , _z : f32 ) -> * mut alt_PointLayout ; } extern "C" { pub fn alt_PointLayout_Create_2 ( elements : * mut f32 ) -> * mut alt_PointLayout ; } extern "C" { pub fn alt_PointLayout_Access_size_t ( _instance : * mut alt_PointLayout , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_PointLayout_Access_size_t_1 ( _instance : * mut alt_PointLayout , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_PointLayout_Create_3 ( _p0 : * mut alt_PointLayout ) -> * mut alt_PointLayout ; } extern "C" { pub fn alt_PointLayout_Create_4 ( _p0 : * mut alt_PointLayout ) -> * mut alt_PointLayout ; } pub type alt_PointLayout_Element = f32 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_PointPaddedLayout { pub x : f32 , pub y : f32 , pub z : f32 , pub pad : f32 , } # [ test ] fn bindgen_test_layout_alt_PointPaddedLayout ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_PointPaddedLayout > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_PointPaddedLayout ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_PointPaddedLayout > ( ) , 4usize , concat ! ( "Alignment of " , stringify ! ( alt_PointPaddedLayout ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_PointPaddedLayout > ( ) ) ) . x as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_PointPaddedLayout ) , "::" , stringify ! ( x ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_PointPaddedLayout > ( ) ) ) . y as * const _ as usize } , 4usize , concat ! ( "Offset of field: " , stringify ! ( alt_PointPaddedLayout ) , "::" , stringify ! ( y ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_PointPaddedLayout > ( ) ) ) . z as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_PointPaddedLayout ) , "::" , stringify ! ( z ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_PointPaddedLayout > ( ) ) ) . pad as * const _ as usize } , 12usize , concat ! ( "Offset of field: " , stringify ! ( alt_PointPaddedLayout ) , "::" , stringify ! ( pad ) ) ) ; } extern "C" { pub fn alt_PointPaddedLayout_free ( ptr : * mut alt_PointPaddedLayout ) ; } extern "C" { pub fn alt_PointPaddedLayout_Create ( ) -> * mut alt_PointPaddedLayout ; } extern "C" { pub fn alt_PointPaddedLayout_Create_1 ( _x : f32 , _y : f32 , _z : f32 ) -> * mut alt_PointPaddedLayout ; } extern "C" { pub fn alt_PointPaddedLayout_Create_2 ( elements : * mut f32 ) -> * mut alt_PointPaddedLayout ; } extern "C" { pub fn alt_PointPaddedLayout_Access_size_t ( _instance : * mut alt_PointPaddedLayout , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_PointPaddedLayout_Access_size_t_1 ( _instance : * mut alt_PointPaddedLayout , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_PointPaddedLayout_Create_3 ( _p0 : * mut alt_PointLayout ) -> * mut alt_PointPaddedLayout ; } extern "C" { pub fn alt_PointPaddedLayout_Create_4 ( _p0 : * mut alt_PointLayout ) -> * mut alt_PointPaddedLayout ; } extern "C" { pub fn alt_PointPaddedLayout_Create_5 ( ) -> * mut alt_PointPaddedLayout ; } extern "C" { pub fn alt_PointPaddedLayout_Create_6 ( x : f32 , y : f32 , z : f32 ) -> * mut alt_PointPaddedLayout ; } extern "C" { pub fn alt_PointPaddedLayout_Create_7 ( elements : * mut 